--- a/src/Kros.AspNetCore/Properties/Resources.resx
+++ b/src/Kros.AspNetCore/Properties/Resources.resx
@@ -123,6 +123,10 @@
   <data name="BadRequest" xml:space="preserve">
     <value>User request is invalid.</value>
   </data>
+  <data name="ErrorCodeException" xml:space="preserve">
+    <value>Error code exception {0}.</value>
+    <comment>0 - StatusCode for HttpResponse.</comment>
+  </data>
   <data name="ErrorHandlingMiddleware_StatusCodeChange" xml:space="preserve">
     <value>Exception {0} was thrown during request pipeline. Status code of the response was changed to {1}.</value>
     <comment>0 - Full type name of exception.
